dashboard/templates/ingress.yml
#@ load("@ytt:data", "data")
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - secretName: kubernetes-dashboard-tls
    hosts:
    #@ for/end host in data.values.domains:
    - #@ "dashboard." + host
  rules:
  #@ for/end host in data.values.domains:
  - host: #@ "dashboard." + host
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
